src/test/resources/purescript_examples/failing/DuplicateModule.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith DuplicateModule\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('M1')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n')
